exports[`invalid(1): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"package.json\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"package.json"
  5 | 	]
  6 | }

`;

exports[`invalid(1): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"package.json\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"src",
> 4 | 		"package.json"
    | 		^^^^^^^^^^^^^^ \`package.json\` is always included by npm and is redundant in \`files\`.
  5 | 	]
  6 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"src"
  4 | 	]
  5 | }

`;

exports[`invalid(2): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"README.md\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"README.md"
  5 | 	]
  6 | }

`;

exports[`invalid(2): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"README.md\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"src",
> 4 | 		"README.md"
    | 		^^^^^^^^^^^ \`README.md\` is always included by npm and is redundant in \`files\`.
  5 | 	]
  6 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"src"
  4 | 	]
  5 | }

`;

exports[`invalid(3): {\n\t\"files\": [\n\t\t\"README\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"README"
  4 | 	]
  5 | }

`;

exports[`invalid(3): {\n\t\"files\": [\n\t\t\"README\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
> 3 | 		"README"
    | 		^^^^^^^^ \`README\` is always included by npm and is redundant in \`files\`.
  4 | 	]
  5 | }

Output:
  1 | {
  2 | 	"files": []
  3 | }

`;

exports[`invalid(4): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"LICENSE\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"LICENSE"
  5 | 	]
  6 | }

`;

exports[`invalid(4): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"LICENSE\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"src",
> 4 | 		"LICENSE"
    | 		^^^^^^^^^ \`LICENSE\` is always included by npm and is redundant in \`files\`.
  5 | 	]
  6 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"src"
  4 | 	]
  5 | }

`;

exports[`invalid(5): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"LICENCE.md\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"LICENCE.md"
  5 | 	]
  6 | }

`;

exports[`invalid(5): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"LICENCE.md\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"src",
> 4 | 		"LICENCE.md"
    | 		^^^^^^^^^^^^ \`LICENCE.md\` is always included by npm and is redundant in \`files\`.
  5 | 	]
  6 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"src"
  4 | 	]
  5 | }

`;

exports[`invalid(6): {\n\t\"files\": [\n\t\t\"./README.md\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"./README.md"
  4 | 	]
  5 | }

`;

exports[`invalid(6): {\n\t\"files\": [\n\t\t\"./README.md\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
> 3 | 		"./README.md"
    | 		^^^^^^^^^^^^^ \`./README.md\` is always included by npm and is redundant in \`files\`.
  4 | 	]
  5 | }

Output:
  1 | {
  2 | 	"files": []
  3 | }

`;

exports[`invalid(7): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"dist\",\n\t\t\"src\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"dist",
  5 | 		"src"
  6 | 	]
  7 | }

`;

exports[`invalid(7): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"dist\",\n\t\t\"src\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"dist",
> 5 | 		"src"
    | 		^^^^^ \`src\` is a duplicate entry in \`files\`.
  6 | 	]
  7 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"dist"
  5 | 	]
  6 | }

`;

exports[`invalid(8): {\n\t\"files\": [\n\t\t\"src/*.js\",\n\t\t\"src/*.js\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"src/*.js",
  4 | 		"src/*.js"
  5 | 	]
  6 | }

`;

exports[`invalid(8): {\n\t\"files\": [\n\t\t\"src/*.js\",\n\t\t\"src/*.js\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"src/*.js",
> 4 | 		"src/*.js"
    | 		^^^^^^^^^^ \`src/*.js\` is a duplicate entry in \`files\`.
  5 | 	]
  6 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"src/*.js"
  4 | 	]
  5 | }

`;

exports[`invalid(9): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"README.md\",\n\t\t\"LICENSE\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"README.md",
  5 | 		"LICENSE"
  6 | 	]
  7 | }

`;

exports[`invalid(9): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"README.md\",\n\t\t\"LICENSE\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"src",
> 4 | 		"README.md",
    | 		^^^^^^^^^^^ \`README.md\` is always included by npm and is redundant in \`files\`.
  5 | 		"LICENSE"
  6 | 	]
  7 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"LICENSE"
  5 | 	]
  6 | }

`;

exports[`invalid(9): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"README.md\",\n\t\t\"LICENSE\"\n\t]\n} 3`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"README.md",
> 5 | 		"LICENSE"
    | 		^^^^^^^^^ \`LICENSE\` is always included by npm and is redundant in \`files\`.
  6 | 	]
  7 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"README.md"
  5 | 	]
  6 | }

`;
